--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="#home" class="nav-item nav-link active">Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#" class="nav-item nav-link">Resume</a>
+                        <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                        <a href="docs/Viraj Sonaje Resume.pdf" class="nav-item nav-link">Resume</a>
                         <a href="#footer" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
