--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                 <div class="container">
                     <div class="footer-info" id = "footer">
                         <h2>Viraj Sonaje</h2>
-                        <h3>1130 Orange Street, Tempe, Arizona, USA</h3>
+                        <h3>Tempe, Arizona, USA</h3>
                         <div class="footer-menu">
                             <p>+1 480 803 8756</p>
                             <p>vsonaje@asu.edu</p>
