--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="icon" href="img/id-badge-regular.svg" type="image/svg">
         <title>Viraj Sonaje</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="MSCS ASU | Software Engineer" name="keywords">
-        <meta content="MSCS ASU | Software Engineer" name="description">
+        <meta content="MSCS ASU Software Engineer" name="keywords">
+        <meta content="MSCS ASU Software Engineer" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
