Experience change and resume update

--- a/index.html
+++ b/index.html
@@ -213,23 +213,45 @@
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>My Resume</p>
-                    <h2>Working Experience</h2>
+                    <p>Work Experience</p>
                 </header>
+                <div class="row">
+                <div class="col-6">
+                    <header class="text-center wow zoomIn" data-wow-delay="0.1s">
+                        <h4>Professional</h4>
+                    </header>
+                </div>
+                <div class="col-6">
+                    <header class="text-center wow zoomIn" data-wow-delay="0.1s">
+                        <h4>Academics</h4>
+                    </header>
+                </div>
+            </div>
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">May 2022 - Present</div>
+                            <div class="timeline-date">July 2023 - Present</div>
+                            <h2>Software Engineer</h2>
+                            <h4>ITC</h4>
+                            <p>
+                                Working on Probilt software to enhance functionalites and optimize performance. 
+                                Alongwith internal web applications for easy access to resources.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">May 2022 - April 2023</div>
                             <h2>Product Solution Intern</h2>
                             <h4>DHL Global Forwarding</h4>
                             <p>
-                                Working on developing web applications to provide insights to business users.
+                                Developed web applications to provide insights to business users.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">Aug 2021 - May 2023(expected)</div>
+                            <div class="timeline-date">Aug 2021 - May 2023</div>
                             <h2>MS Computer Science</h2>
                             <h4>Arizona State University, Tempe</h4>
                             <p>
