--- a/index.html
+++ b/index.html
@@ -215,18 +215,18 @@
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>Work Experience</p>
                 </header>
-                <div class="row">
-                <div class="col-6">
-                    <header class="text-center wow zoomIn" data-wow-delay="0.1s">
-                        <h4>Professional</h4>
-                    </header>
+                <div class="hide-on-mobile row">
+                    <div class="col-6">
+                        <header class="text-center wow zoomIn" data-wow-delay="0.1s">
+                            <h4>Professional</h4>
+                        </header>
+                    </div>
+                    <div class="col-6">
+                        <header class="text-center wow zoomIn" data-wow-delay="0.1s">
+                            <h4>Academics</h4>
+                        </header>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <header class="text-center wow zoomIn" data-wow-delay="0.1s">
-                        <h4>Academics</h4>
-                    </header>
-                </div>
-            </div>
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
